# boxd-out

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  boxd.go  fly.toml  go.mod  go.sum  main.go  main.py  netlify.toml  package.json  pyproject.toml  run.bat
config/: settings.py  urls.py
controller/: favourites.go  health.go
functions/: scheduled-scraper.js
middleware/: auth.go
models/: movie.go
movies/: middleware.py  models.py  repository.py  serializers.py  urls.py  utils.py  views.py
movies/management/commands/: generate_key.py  generate_token.py
movies/migrations/: 0001_initial.py  0002_alter_movie_status.py  0003_alter_movie_image_url_alter_movie_link_url_and_more.py  0004_alter_movie_status.py  0005_alter_movie_options_alter_movie_image_url_and_more.py
movies/services/: __init__.py  image_service.py  scraper_service.py  single_movie_scraper.py
repository/: mongodb.go
service/: images.go  scraper.go
utils/: config.go  jwt.go  token.go
